--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ Colors:
 2. Sidebar Styles
 3. Navbar
 4. Material Icons Rules
+5. Sidebar search form
 /*------------------------------*/
 
 /* 0. General Styling */
@@ -187,7 +188,7 @@ body {
     width: 100%;
     display: block;
     text-align: center;
-    height: 29px;
+    height: 26px;
 }
 .sidebar-nav li a .sidebar-menu-item {
     line-height: 1;
@@ -264,9 +265,11 @@ body {
 		display: block;
 	}
 }
-.sidebar-nav li .sidebar-show-more {
-	border-top: solid 1px rgba(255, 255, 255, 0.12);
+.sidebar-nav li {
 	border-bottom: solid 1px rgba(255, 255, 255, 0.12);
+}
+.sidebar-nav li:nth-child(1) {
+	border-bottom: none;
 }
 .sidebar-nav li.active a,
 .sidebar-nav li a.active {
@@ -290,7 +293,7 @@ body {
 	cursor: pointer;
 }
 #wrapper.toggled .sidebar-nav li[sidebar-nav-submenu].toggled {
-	background-color: #5f5f5f;
+	background-color: #e80303;
 }
 .sidebar-nav li .sidebar-nav-submenu {
 	list-style: none;
@@ -299,8 +302,9 @@ body {
 	opacity: 0;
 	overflow: hidden;
 }
-.sidebar-nav li[sidebar-nav-submenu] a {
-	pointer-events: hover;
+#wrapper.toggled .sidebar-nav li[sidebar-nav-submenu].toggled span i,
+#wrapper.toggled .sidebar-nav li[sidebar-nav-submenu].toggled span {
+	color: #fff;
 }
 @media screen and (min-width: 480px) {
 	.sidebar-nav li .sidebar-nav-submenu,
@@ -321,11 +325,11 @@ body {
 }
 #wrapper.toggled .sidebar-nav li.toggled .sidebar-nav-submenu {
 	opacity: 1;
-	left: 66px;
+	left: 65px;
 	position: fixed;
     top: 51px;
     z-index: 200;
-    width: 80vw;
+    width: 87vw;
 }
 #wrapper.toggled .sidebar-nav li .sidebar-nav-submenu li a {
 	border-bottom: solid 1px #e0e0e0;
@@ -336,7 +340,7 @@ body {
 #wrapper.toggled .sidebar-nav li .sidebar-nav-submenu li a:after {
 	content: "";
 	position: absolute;
-	right: 10px;
+	right: 30px;
 	bottom: 14px;
 	width: 3px;
 	height: 12px;
@@ -449,3 +453,33 @@ body {
 /* Rules for using icons as white on a dark background. */
 .material-icons.md-light { color: rgba(255, 255, 255, 1); }
 .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
+
+/* 5. Sidebar search form */
+#sidebar-search-toggle {
+    position: relative;
+}
+#sidebar-search-form {
+    background-color: #4e4e4e;
+    padding: 5px 9px;
+}
+#sidebar-search-form .col-xs-9 {
+	padding-right: 0;
+}
+#sidebar-search-form .form-control {
+    border-radius: 2px;
+    -webkit-box-shadow: 0 2px 3px #000; 
+    box-shadow: 0 2px 3px #000;
+}
+#sidebar-search-form .btn-search {
+    padding: 4px 10px;
+    position: absolute;
+    right: 14px;
+    background-color: transparent;
+}
+#sidebar-search-form .btn-search i {
+	color: #737373;
+	font-size: 32px;
+}
+#sidebar-search-toggle .sidebar-nav-submenu {
+	padding: 0;
+}
