--- a/style.css
+++ b/style.css
@@ -271,6 +271,11 @@ body {
 .sidebar-nav li:nth-child(1) {
 	border-bottom: none;
 }
+@media screen and (min-width: 480px) {
+	.sidebar-nav li:nth-child(2) {
+		border-top: solid 1px rgba(255, 255, 255, 0.12);
+	}
+}
 .sidebar-nav li.active a,
 .sidebar-nav li a.active {
 	background-color: #E80303;
