--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 	transition: all 0.2s ease;
 }
 #wrapper.toggled {
-	padding-left: 64px;
+	margin-left: 64px;
 }
 #sidebar-wrapper {
 	z-index: 1000;
@@ -68,7 +68,7 @@ body {
 }
 #wrapper.toggled #sidebar-wrapper {
 	width: 65px;
-	overflow-y: scroll;
+	// overflow-y: scroll;
 }
 #page-content-wrapper {
 	width: 100%;
@@ -80,10 +80,10 @@ body {
 }
 @media screen and ( min-width: 480px ) {
 	#wrapper {
-		padding-left: 70px;
+		margin-left: 70px;
 	}
 	#wrapper.toggled {
-		padding-left: 250px;
+		margin-left: 250px;
 	}
 	#sidebar-wrapper {
 		width: 70px;
@@ -326,11 +326,11 @@ body {
 #wrapper .sidebar-nav li.toggled .sidebar-nav-submenu {
 	left: -2000px;
 	opacity: 0;
-	-webkit-transition: left 0 0.2s ease, opacity 0.1s ease;
-	-moz-transition: left 0 0.2s ease, opacity 0.1s ease;
-	-ms-transition: left 0 0.2s ease, opacity 0.1s ease;
-	-o-transition: left 0 0.2s ease, opacity 0.1s ease;
-	transition: left 0 0.2s ease, opacity 0.1s ease;
+	-webkit-transition: left 0s 0.2s ease, opacity 0.1s ease;
+	-moz-transition: left 0s 0.2s ease, opacity 0.1s ease;
+	-ms-transition: left 0s 0.2s ease, opacity 0.1s ease;
+	-o-transition: left 0s 0.2s ease, opacity 0.1s ease;
+	transition: left 0s 0.2s ease, opacity 0.1s ease;
 }
 #wrapper.toggled .sidebar-nav li.toggled .sidebar-nav-submenu {
 	opacity: 1;
@@ -345,11 +345,16 @@ body {
 	position: relative;
 	padding-left: 5px;
 }
+@media screen and (max-height: 500px) {
+	#wrapper.toggled .sidebar-nav li .sidebar-nav-submenu li a {
+		padding-top: 0;
+	}
+}
 #wrapper.toggled .sidebar-nav li .sidebar-nav-submenu li a:before,
 #wrapper.toggled .sidebar-nav li .sidebar-nav-submenu li a:after {
 	content: "";
 	position: absolute;
-	right: 30px;
+	right: 40px;
 	bottom: 14px;
 	width: 3px;
 	height: 12px;
@@ -517,10 +522,13 @@ body {
 
 /* 6. Sidebar Social Icons */
 #social.sidebar-nav {
-	position: absolute;
-	top: auto;
-	bottom: 15px;
-    left: 17px;
+	position: fixed;
+    top: auto;	
+    bottom: 10px;
+    left: 15px;
+}
+#social.sidebar-nav li {
+	border: none;
 }
 #social.sidebar-nav li a {
 	margin-top: 13px;
@@ -555,5 +563,20 @@ body {
 	#social.sidebar-nav li a {
 		margin-top: 2px;
 		padding: 10px;
+	}
+}
+/* Patch for height < 500 */
+@media screen and ( max-height: 500px ) {
+	#wrapper #social {
+		left: -500px;
+	}
+	#wrapper.toggled #social {
+		width: 150px;
+		bottom: 5px;
+    	left: 76px;
+	}
+	#wrapper.toggled #social li {
+		display: inline-block;
+		padding: 0 2px;
 	}
 }
