--- a/style.css
+++ b/style.css
@@ -37,7 +37,14 @@ Colors:
 body {
 	font-family: 'Roboto', sans-serif;
 }
-
+h1,
+h2,
+h3 {
+	font-family: 'marcador-bold';
+}
+p {
+	font-family: 'marcador-regular';
+}
 /* 1. Wrapper */
 #wrapper {
 	padding-left: 0;
@@ -135,6 +142,7 @@ body {
 	.sidebar-nav li a {
 		padding: 10px;
 		left: 0;
+		font-family: 'marcador-regular';
 	}
 	.sidebar-nav li a:hover {
 		background-color: #4a4a4a;
@@ -644,6 +652,7 @@ body {
 	#marcador-ref-links ul li a {
 	    font-size: 12px;
 	    text-align: center;
+	    font-family: 'marcador-regular';
 	}
 	#marcador-ref-links ul li a:hover {
 	    color: #fff;
@@ -680,5 +689,6 @@ body {
 	    font-size: 12px;
 	    font-weight: 300;
 	    letter-spacing: 1px;
+	    font-family: 'marcador-regular';
 	}
 }
