--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ p {
 	transition: all 0.2s ease;
 }
 #wrapper.toggled {
-	margin-left: 64px;
+	// margin-left: 64px;
+	padding-left: 64px;
 }
 #sidebar-wrapper {
 	z-index: 1000;
@@ -94,6 +95,7 @@ p {
 		margin-left: 70px;
 	}
 	#wrapper.toggled {
+		padding-left: 0;
 		margin-left: 250px;
 	}
 	#sidebar-wrapper {
@@ -766,7 +768,9 @@ p {
 }
 
 /* 10. Hero unit */
-.marcador-hero-post {}
+.marcador-hero-post {
+	margin-bottom: 15px;
+}
 
 .marcador-hero-unit {
 	position: relative;
@@ -795,4 +799,90 @@ p {
 		margin-left: 0;
 		margin-right: 0;
 	}
+}
+
+/* Marcador Hero Post Score */
+.marcador-hero-post.score .marcador-hero-unit {
+	margin-bottom: 30px;
+}
+.marcador-hero-post.score .hero-heading h1 {
+	color: #000;
+	font-size: 20px;
+}
+.marcador-hero-post.score .hero-heading .excerpt {
+	font-size: 16px;
+	color: #777;
+	margin-top: 10px;
+}
+.hero-score {
+    position: absolute;
+    bottom: -30px;
+    width: 100%;
+    color: #fff;
+}
+.score-marc {
+    position: relative;
+    width: 125px;
+    border: solid 8px #fff;
+    margin: 0 auto;
+    height: 95px;
+    border-radius: 5px;
+    background-color: #777;
+}
+.score-marc:before {
+	content: "";
+	position: absolute;
+	top: 7px;
+	left: 0;
+	width: 51%;
+	height: 50%;
+	border-right: solid 2px #fff;
+	display: block;
+	z-index: 1;
+}
+.team-name {
+    font-size: 16px;
+}
+.team-1, 
+.team-2 {
+    position: absolute;
+    bottom: 45px;
+    width: 30%;
+}
+.team-1 {
+	left: 0;
+	text-align: right;
+}
+.team-2 {
+    right: 0;
+    text-align: left;
+}
+.score-team-1,
+.score-team-2 {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    background-color: #999;
+    width: 50%;
+    font-size: 3em;
+    text-align: center;
+}
+.score-team-1 {
+	left: 0;
+}
+.score-team-2 {
+    right: 0;
+}
+.score-status {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #3d3d3d;
+    text-align: center;
+    padding: 3px 0;
+    font-size: 12px;
+}
+@media screen {
+	
 }
