--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ Colors:
 8. Sidebar footer copy
 9. Navbar submenu marcador
 10. Hero unit
+11. 11. Marcador Hero Post Scoreore
+12. Marcador Post Listing 
 /*------------------------------*/
 
 /* 0. General Styling */
@@ -749,6 +751,7 @@ p {
 	padding: 11px 24px;
 	font-family: 'marcador-regular';
 	position: relative;
+	text-transform: uppercase;
 }
 #marcador-navbar-submenu .nav li.active a {
 	background-color: #707070;
@@ -793,15 +796,28 @@ p {
     margin-top: 125px;
     margin-bottom: 25px;
     color: #fff;
+    text-decoration: none;
+}
+.marcador-hero-unit:hover .hero-heading h1,
+.marcador-hero-unit .hero-heading,
+.marcador-hero-permalink:hover,
+.marcador-hero-permalink:hover h1,
+.marcador-hero-unit .hero-heading h1:hover {
+	text-decoration: none;
+	outline: none;
 }
 @media screen and ( min-width: 480px ) {
 	.marcador-hero-unit {
 		margin-left: 0;
 		margin-right: 0;
+		min-height: 290px;
+	}
+	.marcador-hero-unit .hero-heading h1 {
+		margin-top: 200px;
 	}
 }
 
-/* Marcador Hero Post Score */
+/* 11. Marcador Hero Post Score */
 .marcador-hero-post.score .marcador-hero-unit {
 	margin-bottom: 30px;
 }
@@ -883,6 +899,77 @@ p {
     padding: 3px 0;
     font-size: 12px;
 }
-@media screen {
-	
+@media screen and ( min-width: 480px ) {
+	.team-name {
+		font-size: 22px;
+	}
+}
+
+/* 12. Marcador Post Listing */
+.marcador-posts-listing-wrapper {
+	border-top: solid 1px #ececec;
+	padding-top: 25px;
+    margin-bottom: 25px;
+}
+.marcador-post-list-category a {
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #6d6c6c;
+    font-style: italic;
+}
+.marcador-post-list-image {
+    height: 120px;
+    width: 100%;
+    background-color: #ccc;
+}
+.marcador-post-list .marcador-post-list-image-col {
+    padding: 0;
+}
+.marcador-post-list-title {
+    margin-top: 2px;
+    font-family: 'marcador-bold';
+    margin-bottom: 2px;
+}
+.marcador-post-list-title a {
+	color: #333;
+}
+.marcador-post-list-meta a {
+    position: relative;
+    top: 17px;
+    font-size: 12px;
+    color: #aab0b5;
+    font-weight: 700;
+    text-align: right;
+    font-style: italic;
+}
+.marcador-post-list-author,
+.marcador-post-list-date {
+    display: inline-block;
+}
+.marcador-post-list-author {}
+.marcador-post-list-date {}
+.marcador-post-list .container-fluid {
+    padding-bottom: 25px;
+    border-bottom: solid 1px #ececec;
+}
+.marcador-post-list {
+    margin-bottom: 25px;
+}
+.marcador-post-list-fav {
+	display: inline-block;
+    position: absolute;
+    bottom: -25px;
+    right: 0;
+}
+.marcador-post-list-fav .material-icons {
+	color: #E80303;
+}
+@media screen and ( min-width: 480px ) {
+	.marcador-post-list-author a {
+		padding-right: 15px;
+		border-right: solid 3px #aab0b5;
+	}
+	.marcador-post-list-date a {
+		padding-left: 10px;
+	}
 }
