--- a/style.css
+++ b/style.css
@@ -778,7 +778,6 @@ p {
 .marcador-hero-unit {
 	position: relative;
 	min-height: 225px;
-	max-height: 300px;
 	background-color: #ccc;
 	background-size: cover;
 	background-position: center;
@@ -814,6 +813,9 @@ p {
 	}
 	.marcador-hero-unit .hero-heading h1 {
 		margin-top: 200px;
+		font-size: 35px;
+		line-height: 1.2;
+		letter-spacing: 0.5px;
 	}
 }
 
@@ -901,7 +903,11 @@ p {
 }
 @media screen and ( min-width: 480px ) {
 	.team-name {
-		font-size: 22px;
+		font-size: 30px;
+	}
+	.team-1, 
+	.team-2 {
+	    width: 40%;
 	}
 }
 
