--- a/style.css
+++ b/style.css
@@ -929,6 +929,9 @@ p {
     height: 120px;
     width: 100%;
     background-color: #ccc;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .marcador-post-list .marcador-post-list-image-col {
     padding: 0;
