--- a/style.css
+++ b/style.css
@@ -1106,3 +1106,11 @@ img.aligncenter.size-full {
 		font-size: 18px;
 	}
 }
+@media screen and (min-width : 990px) {
+	.single-post-content p {
+		font-size: 23px;
+	}
+	.single-post-title-content .single-post-title {
+		font-size: 40px;
+	}
+}
