--- a/style.css
+++ b/style.css
@@ -1073,7 +1073,6 @@ p {
 }
 .single-post-content iframe {
 	max-width: 100% !important;
-	height: auto;
 }
 .meta-divisor {
     margin: 0 10px -4px 10px;
@@ -1104,6 +1103,10 @@ img.aligncenter.size-full {
 @media screen and (min-width : 480px) {
 	.single-post-content p {
 		font-size: 18px;
+	}
+	.single-post-content iframe {
+		display: block;
+		margin: 0 auto;
 	}
 }
 @media screen and (min-width : 990px) {
